--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -279,6 +279,42 @@ These diverse metrics enable a comprehensive evaluation of the model’s speech 
 
 ## 5·Results: 结果
 
+We report the performance of RingFormer and the baseline models evaluated on LJSpeech using the above objective and subjective metrics.
+Table 2 presents the performance evaluation results of RingFormer and baseline vocoder models.
+
+The proposed model demonstrates overall stable performance, achieving particularly strong results in MOS, which evaluates the naturalness and quality of speech, surpassing other models.
+It also maintains consistent quality in the NISQA metric, confirming its ability to deliver reliable performance without introducing distortions to the speech signal.
+While the proposed model slightly falls behind BigVGAN in MCD and STOI metrics, it achieves comparable performance, demonstrating competitiveness in terms of speech similarity and intelligibility.
+In WER, which measures pronunciation accuracy, the proposed model performs on par with other models, confirming that the synthesized speech is clearly recognizable.
+Additionally, in the subjective CMOS evaluation, the proposed model shows marginally better performance compared to BigVGAN and performs favorably against HiFi-GAN.
+This suggests that the proposed model can provide high-quality audio in practical applications.
+These results highlight that the proposed model generates more natural speech quality and clearer pronunciation compared to existing vocoders.
+
+Table 3 presents the evaluation results for the number of parameters and inference speed of RingFormer and the comparison models.
+The proposed model achieves high inference speed while maintaining a reasonable balance in terms of model size.
+RingFormer has 3.8 times fewer parameters than BigVGAN [3] and is approximately twice as fast in inference.
+Considering the similar performance of both models, RingFormer can be regarded as sufficiently competitive.
+On the other hand, RingFormer outperforms HiFi-GAN [2] and iSTFT-Net [15] in terms of performance but has 2.1 to 2.2 times more parameters with similar inference speed.
+Furthermore, when ring attention is removed from the proposed model, the inference speed drops by up to 1.5 times, highlighting the significant role of ring attention in enabling fast speech generation.
+These results demonstrate that our model generates high-quality speech while supporting real-time processing, further enhancing its practicality for various applications.
+
+Table 4 presents the results of evaluating the impact of each component of RingFormer on the quality of synthesized speech.
+The MOS of the complete RingFormer model, which includes all components, is 4.11.
+When the magnitude loss ($\mathcal{L}_{mag}$) and phase loss ($\mathcal{L}_{arg}$) are removed, the MOS decreases to 4.05, suggesting that these loss terms contribute to capturing the detailed periodic and amplitude information of speech.
+Removing the MS-SB-CQT discriminator also results in a decline in quality, indicating that continuous sequence discrimination positively contributes to synthesis quality.
+When both components are removed, the MOS reaches its lowest value of 4.03, demonstrating that the combination of magnitude loss, phase loss, and the MS-SB-CQT discriminator is important for maximizing speech synthesis quality.
+
+Additionally, to analyze RingFormer's performance in modeling long-term dependencies more precisely, experiments were conducted by reducing the size of the latent variable $z$ to 1/2 and 1/4, thereby reducing the receptive field.
+The results showed a gradual decline in evaluation metrics as the receptive field decreased, confirming that a sufficient receptive field in RingFormer is crucial for learning long-term dependencies in speech and generating high-quality audio.
+
+Table 5 evaluates the ability of the RingFormer model to capture long-term dependencies by analyzing the autocorrelation of the F0 contour.
+The results show that the RingFormer model achieves the highest Pearson correlation coefficient with the ground truth, highlighting its strong performance in learning long-term dependencies.
+
+Figure 4 visualizes this capability through an attention map, where bright patterns are maintained even in regions far from the diagonal, reflecting long-term dependencies.
+Additionally, Figure 5 illustrates the attention scores for an arbitrary query.
+As shown in the figure, the RingFormer model assigns notable attention scores even to temporally distant query-key pairs, indicating that it effectively utilizes long-term temporal information during audio generation.
+The attention values are generally evenly distributed, supporting the role of the Conformer block in maintaining a stable and natural temporal structure in the synthesized audio.
+
 ## 6·Conclusions: 结论
 
 In this paper, we propose RingFormer, a vocoder that efficiently processes long sequences with long-term dependencies through a Conformer block with Ring Attention, while maintaining a reasonable memory usage to synthesize high-quality speech.
